<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:orientation="vertical"
    android:id="@+id/coordinator"
    tools:context=".Journal.JournalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edittext_background"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/journal"
            style="@style/TitleStyle"
            android:layout_weight="1"
            />
        <ImageButton
            android:id="@+id/btnDashBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dashboard"
            android:layout_gravity="center"
            android:background="@drawable/edittext_background"
            android:layout_marginEnd="16dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/balance_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/total_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_balance"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/porcentaje"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dashboardJournal"
            android:layout_below="@+id/balance_layout"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="12dp"
            app:strokeWidth="0.5dp"
            app:cardBackgroundColor="@color/background_component_selected"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    >
                    <TextView
                        android:id="@+id/tvWin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/porcentaje"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        android:textColor="@color/green"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/win"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textAllCaps="true"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    >
                    <TextView
                        android:id="@+id/tvLoss"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/porcentaje"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loss"
                        android:textSize="24sp"
                        android:textColor="@color/white"
                        android:textAllCaps="true"
                        />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerviewTitle"
            android:text="@string/transactions"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_below="@+id/dashboardJournal"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:background="@color/background_component_selected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerview"
            android:layout_below="@+id/recyclerviewTitle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnAdd"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/background_button"
            android:src="@android:drawable/ic_input_add"
            app:fabSize="normal"
            app:tint="@color/white"
            />

    </RelativeLayout>
</LinearLayout>